report now has references and explanation of MF-SNR and hypothesis test

--- a/report/lib/config.tex
+++ b/report/lib/config.tex
@@ -27,8 +27,8 @@
 \def\tablepadding {1.0}            % Espaciado de celda de las tablas
 
 % ESTILO PORTADA Y HEADER-FOOTER
-\def\hfstyle {style1}              % Estilo header-footer (10 estilos disp.)
-\def\portraitstyle {style1}        % Estilo portada (18 estilos disp.)
+\def\hfstyle {style9}              % Estilo header-footer (10 estilos disp.)
+\def\portraitstyle {style9}        % Estilo portada (18 estilos disp.)
 
 % MÁRGENES DE PÁGINA
 \def\firstpagemargintop {3.8}      % Margen superior página portada [cm]
@@ -52,7 +52,7 @@
 \def\captiontextbold {false}       % Etiqueta (código,figura,tabla) en negrita
 \def\codecaptiontop {true}         % Leyenda arriba del código fuente
 \def\figurecaptiontop {false}      % Leyenda arriba de las imágenes
-\def\showsectioncaption {none}     % N° sec. en objeto (none,sec,ssec,sssec)
+\def\showsectioncaption {sec}     % N° sec. en objeto (none,sec,ssec,sssec)
 \def\tablecaptiontop {true}        % Leyenda arriba de las tablas
 
 % CONFIGURACIÓN DEL ÍNDICE
@@ -74,11 +74,11 @@
 \def\highlightcolor {yellow}       % Color del subrayado con \hl
 \def\indextitlecolor {black}       % Color de los títulos del índice
 \def\linenumbercolor {dgray}       % Color del n° de línea (\showlinenumbers)
-\def\linkcolor {black}             % Color de los links del doc.
+\def\linkcolor {green}             % Color de los links del doc.
 \def\maintextcolor {black}         % Color principal del texto
 \def\numcitecolor {black}          % Color del n° de las referencias o citas
 \def\portraittitlecolor {black}    % Color de los títulos de la portada
-\def\showborderonlinks {false}     % Color de un link por un recuadro de color
+\def\showborderonlinks {true}     % Color de un link por un recuadro de color
 \def\sourcecodebgcolor {lgray}     % Color de fondo del código fuente
 \def\subsubtitlecolor {black}      % Color de los sub-subtítulos
 \def\subtitlecolor {black}         % Color de los subtítulos
@@ -103,7 +103,7 @@
 \def\showappendixsecindex {false}  % Título de la sec. de anexos en el índice
 \def\showappendixsectitle {false}  % Título de la sec. de anexo en el informe
 \def\stylecitereferences {bibtex}  % Estilo cita/ref. (bibtex,apacite,natbib)
-\def\twocolumnreferences {false}   % Referencias en dos columnas
+\def\twocolumnreferences {true}    % Referencias en dos columnas
 
 % CONFIGURACIÓN DE LOS TÍTULOS
 \def\anumsecaddtocounter {true}    % Insertar títulos 'anum' aumenta n° de sec
