developing notebooks update

--- a/developing/notebooks/Untitled.ipynb
+++ b/developing/notebooks/Untitled.ipynb
@@ -2,23 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Does nufft.py exist?  True\n",
-      "Does om1D.npz exist? True\n",
-      "Does om2D.npz exist? True\n",
-      "Does om3D.npz exist? True\n",
-      "Does phantom_3D_128_128_128.npz exist? True\n",
-      "Does phantom_256_256.npz exist? True\n",
-      "Does example_1D.py exist? True\n",
-      "Does example_2D.py exist? True\n",
-      "reikna cannot be imported, check installation!\n",
-      "       Install reikna by the command 'pip install reikna --user '\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pynufft'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6474568cbbda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpynufft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtests\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpynufft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnufft\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNUFFT_cpu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNUFFT_hsa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pynufft'"
      ]
     }
    ],
@@ -269,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
